package example_builder.advBuilder;

public enum Transmission {
    AUTO, MANUAL
}
