@startuml

title __SIMPLEBUILDER's Class Diagram__\n

  namespace example_builder.simpleBuilder {
    class example_builder.simpleBuilder.Main {
        {static} + main()
    }
  }
  

  namespace example_builder.simpleBuilder {
    class example_builder.simpleBuilder.SimplePatternCar {
        - maxSpeed : int
        - model : String
        + setMaxSpeed()
        + setModel()
        + setTransmission()
        + toString()
    }
  }
  

  namespace example_builder.simpleBuilder {
    class example_builder.simpleBuilder.SimplePatternCarBuilder {
        - m : String
        - s : int
        ~ build()
        ~ maxSpeed()
        ~ model()
        ~ transmission()
    }
  }
  

  namespace example_builder.simpleBuilder {
    enum Transmission {
      AUTO
      MANUAL
    }
  }
  

  example_builder.simpleBuilder.SimplePatternCar o-- example_builder.simpleBuilder.Transmission : transmission
  example_builder.simpleBuilder.SimplePatternCarBuilder o-- example_builder.simpleBuilder.Transmission : t


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
